Updated images and descriptions. Project tab is done

--- a/data/membros.yml
+++ b/data/membros.yml
@@ -56,7 +56,7 @@ membro:
     imagem: mariaPortugal.png
   - nome:  José Pereira  
     cargo: Membro
-    imagem: josePereira.png
+    imagem: josePereira.jpg
   - nome:  Mafalda Serafim  
     cargo: Membro
     imagem: mafaldaSerafim.jpg
