--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ textColorDark = "#6dba83"
 whiteColor = "#ffffff"
 recruitmentTime = true
 #lista de imagens que aparecem no carousel da pagina principal
-carouselImagens=["images/caroussel_1_small.jpg", "images/caroussel_2_small.jpg"]
+carouselImagens=["images/carousel/carouselMembersHugo.jpg", "images/carousel/carouselProjects.png"]
 
 
 [Languages]
