Removed old members. Replaced admins

--- a/data/membros.yml
+++ b/data/membros.yml
@@ -15,15 +15,15 @@ desenvolvimento:
   - nome:  Ricardo Antunes
     cargo: 3ºano, LEIC
     imagem: 99316.png
-  - nome:  José Pereira
-    cargo: 2ºano, LEIC
-    imagem: 103252.png
+  - nome:  Rita Gama
+    cargo: 3ºano, LEIC
+    imagem: 99166.png
   - nome:  Diogo Correia
     cargo: 3ºano, LEIC
     imagem: 99211.jpg
-  - nome:  Rafaela Rodrigues  
+  - nome:  Francisco Carvalho  
     cargo: 3ºano, LEIC
-    imagem: 99312.png
+    imagem: 99219.png
   - nome:  Manuel Soares
     cargo: 3ºano, LEEC
     imagem: 96267.png
@@ -38,9 +38,9 @@ marketing:
   - nome:  Armando Gonçalves
     cargo: 3ºano, LEFT
     imagem: 100290.png
-  - nome:  Henrique Pocinho
-    cargo: 3ºano, LEEC
-    imagem: 99952.png
+  - nome:  Miguel Lameiras
+    cargo: 3ºano, LEFT
+    imagem: 100354.png
   - nome: Bianca Fonseca
     cargo: 2ºano, LEIC
     imagem: 103501.png
@@ -167,9 +167,6 @@ membro:
   - nome: Ana Ajuda
     imagem: 98501.png
     cargo: 
-  - nome: Ana Martins
-    cargo: 
-    imagem: 96506.png
   - nome: André Santos
     cargo: 
     imagem: 103597.jpeg
@@ -203,9 +200,6 @@ membro:
   - nome: Diogo Ferreira
     cargo: 
     imagem: 92806.jpeg
-  - nome: Diogo Matos
-    cargo: 
-    imagem: 95778.png
   - nome: Eduardo Faustino
     cargo: 
     imagem: 102298.jpg
@@ -218,18 +212,9 @@ membro:
   - nome: Francisco Carvalho
     cargo: 
     imagem: 99219.png
-  - nome: Francisco Cruz
-    cargo: 
-    imagem: 96208.png
   - nome: Guilherme Freitas
     cargo: 
     imagem: 99949.png
-  - nome: Henrique Pocinho
-    cargo: 
-    imagem: 99952.png
-  - nome: Hugo Marques
-    cargo: 
-    imagem: 89460.png
   - nome: Isabel Portugal
     cargo: 
     imagem: 100227.png
@@ -294,7 +279,7 @@ membro:
     imagem: 96298.png
     cargo: 
   - nome: Pedro Direita
-    cargo: 
+    cargo: Honorable Alumni
     imagem: 81305.png
   - nome: Rafaela Rodrigues
     cargo: 
