--- a/data/membros.yml
+++ b/data/membros.yml
@@ -15,9 +15,9 @@ desenvolvimento:
   - nome:  Ricardo Antunes
     cargo: 3ºano, LEIC
     imagem: 99316.png
-  - nome:  José Pereira
-    cargo: 2ºano, LEIC
-    imagem: 103252.png
+  - nome:  Rita Gama
+    cargo: 3ºano, LEIC
+    imagem: 99166.png
   - nome:  Diogo Correia
     cargo: 3ºano, LEIC
     imagem: 99211.jpg
@@ -163,9 +163,6 @@ membro:
   - nome: Ana Ajuda
     imagem: 98501.png
     cargo: 
-  - nome: Ana Martins
-    cargo: 
-    imagem: 96506.png
   - nome: André Santos
     cargo: 
     imagem: 103597.jpeg
@@ -199,9 +196,6 @@ membro:
   - nome: Diogo Ferreira
     cargo: 
     imagem: 92806.jpeg
-  - nome: Diogo Matos
-    cargo: 
-    imagem: 95778.png
   - nome: Eduardo Faustino
     cargo: 
     imagem: 102298.jpg
@@ -214,9 +208,6 @@ membro:
   - nome: Francisco Carvalho
     cargo: 
     imagem: 99219.png
-  - nome: Francisco Cruz
-    cargo: 
-    imagem: 96208.png
   - nome: Guilherme Freitas
     cargo: 
     imagem: 99949.png
@@ -287,7 +278,7 @@ membro:
     imagem: 96298.png
     cargo: 
   - nome: Pedro Direita
-    cargo: 
+    cargo: Honorable Alumni
     imagem: 81305.png
   - nome: Rafaela Rodrigues
     cargo: 
