--- a/data/membros.yml
+++ b/data/membros.yml
@@ -285,7 +285,7 @@ membro:
     imagem: 99316.png
   - nome: Rita Gama
     cargo: 
-    imagem: 99166.jpg
+    imagem: 99166.png
   - nome: Rodrigo Francisco
     cargo: 
     imagem: 100073.png
