Corrected Rita Gama's photo

--- a/data/membros.yml
+++ b/data/membros.yml
@@ -288,7 +288,7 @@ membro:
     imagem: 99316.png
   - nome: Rita Gama
     cargo: 
-    imagem: 99166.jpg
+    imagem: 99166.png
   - nome: Rodrigo Francisco
     cargo: 
     imagem: 100073.png
