corracao nome fotos

--- a/data/membros.yml
+++ b/data/membros.yml
@@ -240,7 +240,7 @@ membros:
   #curso:
   imagem: placeholder.png
 - nome: Pedro Direita
-  cargo: 
+  cargo: Alumni
   #curso:
   imagem: pedroDireita.png
 - nome: Pedro Nantes
